fixed aft slider not moving on mobile version

--- a/src/app/main-content/atf/atf.component.scss
+++ b/src/app/main-content/atf/atf.component.scss
@@ -213,7 +213,6 @@ h2 {
   .slider {
     font-size: 20px;
     > div {
-      animation: move-words 10s linear infinite;
       gap: 50px;
     }
   }
